--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --respawn --transpile-only practice.ts",
+    "start": "ts-node-dev --respawn --transpile-only practices2.ts",
     "dev": "node h.js"
   },
   "keywords": [],
